--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 asgiref==3.7.1
 Django==4.2.1
+flake8==6.0.0
+mccabe==0.7.0
+Pillow==9.5.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
 sqlparse==0.4.4
 typing_extensions==4.6.2
